# attdenace_app

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: audits.ts  client.ts  employeeFiles.ts  employees.ts  payroll.ts
src/components/: AttendanceIcon.tsx  New Text Document.txt  RoleBadge.tsx  RouteGuard.tsx
src/constants/: brands.ts
src/features/employeeFiles/: index.ts  types.ts
src/features/employeeFiles/api/: employeeFiles.ts
src/features/employeeFiles/utils/: index.ts  sessions.ts  time.ts
src/hooks/: useEmployeeOverview.ts
src/lib/: download.ts  roles.ts
src/pages/: App.tsx  Audits.tsx  Dashboard.tsx  Devices.tsx  Employees.tsx  Login.tsx  Logs.tsx  Payroll.tsx  Settings.tsx
src/pages/EmployeeFile/: DeductionsTab.tsx  EmployeeFileModal.tsx  EmployeeFilePage.tsx  Guarded.tsx  LateOverrides.tsx  PayrollTab.tsx  SalaryHistory.tsx  index.tsx
src/pages/Settings/: LatePolicyCard.tsx
src/store/: auth.ts
src/styles/: index.css
src/types/: employee-files.ts  models.ts
